# qwen3-tts-clone-and-speak

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: engines.md  voice-cloning-guide.md
scripts/: balanced-range-120s.txt  core-clarity-90s.txt  extended-coverage-150s.txt  full-spectrum-180s.txt
src/: generate_reference.py  tts_record.py
webapp/: app.js  index.html  styles.css  test-word-gap.html
