[project]
name = "qwen3-tts-clone-and-speak"
version = "0.1.1"
description = "Voice cloning and text-to-speech using MLX Audio (Qwen3 + Kokoro)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy",
  "soundfile",
  "num2words",
  "mlx-audio>=0.3.0",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "spacy>=3.7,<4",
  "typer>=0.21.1",
  "espeakng-loader>=0.2.4",
  "misaki>=0.8,<0.9",
  "phonemizer>=3.2,<3.3",
]

[project.scripts]
tts-record = "tts_record:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = [
  "src/tts_record.py",
  "src/generate_reference.py",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv]
prerelease = "allow"
